cloudformation-github.yml
AWSTemplateFormatVersion: "2010-09-09"
Description: Template to Create a Jenkins server using cloudformation

Parameters:

  AMI:
    Type: String
    Default: ami-0d37e07bd4ff37148
    Description: Amazon Linux 2 AMI

  InstanceTypeParameter:
    Type: String
    Default: t2.micro
    Description: Jenkins instance type is t2.micro

  Key:
    Type: 'AWS::EC2::KeyPair::KeyName'
    Default: jenkins-kp
    Description: The key used to access the instance.

  VPCBlock:
    Type: String
    Default: 10.2.0.0/16
    Description: The CIDR Block for the VPC
    
  PrivateSubnet01Block:
    Type: String
    Default: 10.2.2.0/24
    Description: The CIDR Block for the private subnet 01
    
  PublicSubnet01Block:
    Type: String
    Default: 10.2.1.0/24
    Description: The CIDR Block for the public subnet 01
    
 
Resources:

  VPC:
    Type: AWS::EC2::VPC
    Properties: 
      CidrBlock: !Ref VPCBlock
      EnableDnsHostnames: true
      EnableDnsSupport: true
      InstanceTenancy: default
      Tags: 
        - Key: Name
          Value:  Github-VPC

  PrivateSubnet01:
    Type: AWS::EC2::Subnet
    Properties:
      AvailabilityZone: eu-west-2b
      CidrBlock: !Ref PrivateSubnet01Block
      VpcId: !Ref VPC
      Tags:
        - Key: Name
          Value: Github-PrivateSubnet01

  PublicSubnet01:
    Type: AWS::EC2::Subnet
    Properties:
      MapPublicIpOnLaunch: true
      AvailabilityZone: eu-west-2a
      CidrBlock: !Ref PublicSubnet01Block
      VpcId: !Ref VPC
      Tags:
        - Key: Name
          Value: Github-PublicSubnet01

  PublicRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref VPC
      Tags:
        - Key: Name
          Value: Github-PublicRouteTable

  PrivateRouteTable01:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref VPC
      Tags:
        - Key: Name
          Value: Github-PrivateRouteTable

  PublicRoute:
    DependsOn: VPCGatewayAttachment
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref PublicRouteTable
      DestinationCidrBlock: 0.0.0.0/0 
      GatewayId: !Ref IGW

  PublicSubnet01RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref PublicSubnet01
      RouteTableId: !Ref PublicRouteTable

  PrivateSubnet01RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref PrivateSubnet01
      RouteTableId: !Ref PrivateRouteTable01

  EC2:
    Type: AWS::EC2::Instance
    Properties:
      ImageId: !Ref AMI
      InstanceType: !Ref InstanceTypeParameter
      KeyName: !Ref Key
      SubnetId: !Ref PublicSubnet01
      SecurityGroupIds: 
        - Ref: InstanceSecurityGroup
      BlockDeviceMappings: 
        - DeviceName: "/dev/xvda"
          Ebs: 
            VolumeType: "gp3"
            Iops: "3000"
            DeleteOnTermination: "true"
            VolumeSize: "8" 
      UserData:
         Fn::Base64:
          !Sub |
            #!/bin/bash
            sudo yum update –y
            sudo yum install java-1.8.0-openjdk-devel -y
            curl --silent --location http://pkg.jenkins-ci.org/redhat-stable/jenkins.repo | sudo tee /etc/yum.repos.d/jenkins.repo
            sudo rpm --import https://pkg.jenkins.io/redhat/jenkins.io.key
            sudo systemctl daemon-reload
            sudo amazon-linux-extras install epel -y
            sudo yum install jenkins -y
            sudo systemctl start jenkins
            sudo systemctl status jenkins
            sudo systemctl enable jenkins
            sudo cat /var/lib/jenkins/secrets/initialAdminPassword
      Tags: 
        - Key: Name
          Value:  Github-EC2Instance
  
  EIPAddress:
    Type: AWS::EC2::EIP


  EIPAssoc:
    Type: AWS::EC2::EIPAssociation
    Properties:
      InstanceId: !Ref EC2
      EIP: !Ref EIPAddress

 
  InstanceSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupName: "Github-SecurityGroup"
      GroupDescription: "Security Group"
      VpcId: !Ref VPC
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: '22'
          ToPort: '22'
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: '8080'
          ToPort: '8080'
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: '80'
          ToPort: '80'
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: '443'
          ToPort: '443'
          CidrIp: 0.0.0.0/0

  IGW: 
    Type: AWS::EC2::InternetGateway
    Properties: 
      Tags:
        - Key: Name
          Value: Github-IGW

  VPCGatewayAttachment:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties: 
      InternetGatewayId: !Ref IGW
      VpcId: !Ref VPC
  
Outputs:
  PublicSubnet01Id:
    Description: Public Subnet 01 ID in the VPC
    Value: !Ref PublicSubnet01
    Export: 
      Name: !Sub "${AWS::StackName}-PublicSubnet01Id"

  PrivateSubne01tId:
    Description: Private Subnet 01 ID in the VPC
    Value: !Ref PrivateSubnet01
    Export: 
      Name: !Sub "${AWS::StackName}-PrivateSubnetId"

  VpcId:
    Description: The VPC Id
    Value: !Ref VPC
    Export: 
      Name: !Sub "${AWS::StackName}-VPCID"
